--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_email:           "jinkai2525@gmail.com"
 # resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>Hi, this is Jiankai, a PhD student from the University of Melbourne.</p>"
+resume_header_intro: "<p>Hi, this is Jiankai, a PhD student from the University of Melbourne. I was also a machine learning engineer focusing on recommendation algorithms before.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
@@ -38,8 +38,8 @@ resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
 resume_section_recognition:     true
-resume_section_links:           true
-resume_section_associations:    true
+resume_section_links:           false
+resume_section_associations:    false
 # resume_section_interests:       true
 
 # Resume social links
