--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,4 @@
-# Recognitions
+# Publications
 - award: Outstanding Achievement
   organization: Springfield Young Professionals
   year: 2010, 2014
