--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -4,3 +4,7 @@
   conference: In 2022 IEEE Symposium on Security and Privacy (SP), pp. 473-488.
   link: <a href="https://arxiv.org/abs/2112.05307" target="_blank">preprint</a> <a href="https://www.computer.org/csdl/proceedings-article/sp/2022/131600b547/1FlQx7dQPYs" target="_blank">publisher</a>
   comment: This study has attacked Meta’s Opacus library for Pytorch and Google's Differential Privacy library. Meta has since fixed the <a href="https://github.com/pytorch/opacus/blob/main/opacus/optimizers/optimizer.py" target="_blank">issue</a> and Google acknowledged our finding via <a href="https://bughunters.google.com/profile/1e5f9da7-e8d5-42dc-be8b-cc576152232a" target="_blank">Google Bug Hunter</a>. One Author (Olga) of this paper is invited to present this paper in <a href="https://www.youtube.com/watch?v=F_97aqMUtnY&ab_channel=GoogleTechTalks" target="_blank">Google TechTalk</a>.
+- authors: Jiankai Jin, Olga Ohrimenko, Benjamin I. P. Rubinstein. 
+  title: "Getting a-Round Guarantees: Floating-Point Attacks on Certified Robustness"
+  conference: arXiv preprint arXiv:2205.10159., 2022. 
+  link: <a href="https://arxiv.org/abs/2205.10159" target="_blank">preprint</a>
