--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,6 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
-
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Doctor of Philosophy–Engineering and IT
+  uni: The University of Melbourne
+  year: 2021-Present
+  supervisors: A/Prof Olga Ohrimenko, Prof Ben Rubinstein
+  summary: Identifying and Preventing Implementation Flaws in Secure Machine Learning Systems
