--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,3 +4,9 @@
   year: 2021-Present
   supervisors: A/Prof Olga Ohrimenko, Prof Ben Rubinstein
   summary: Identifying and Preventing Implementation Flaws in Secure Machine Learning Systems
+
+- degree: Master of Information Technology 
+  uni: The University of Melbourne
+  year: 2018-2020
+  supervisors: A/Prof Olga Ohrimenko
+  summary: Effects of Data Sampling on Training of Machine Learning Models
