--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,4 +7,4 @@
 - authors: Jiankai Jin, Olga Ohrimenko, Benjamin I. P. Rubinstein. 
   title: "Getting a-Round Guarantees: Floating-Point Attacks on Certified Robustness"
   conference: arXiv preprint arXiv:2205.10159., 2022. 
-  link: <a href="https://arxiv.org/abs/2205.10159" target="_blank">preprint</a>
+  link: <a href="https://arxiv.org/abs/2205.10159" target="_blank">[preprint]</a>
